documentation/1.3/walkthrough.md
---
layout: documentation13
title: Ceylon Walkthrough
tab: documentation
unique_id: walkthroughpage
author: Gavin King
doc_root: ..
---
# #{page.title}

The Ceylon Walkthrough is a set of exercises originally developed 
for a workshop presented by Gavin and Enrique in Mexico City. It 
comes in English, Spanish, French, and German, and covers much of 
the basics of the language.

## Before you start

To try the walkthrough, first install Java 7 or 8, Eclipse Mars, Luna 
or Neon, and Ceylon IDE 1.3 [for Eclipse](../ide/eclipse/install) or
[for IntelliJ](../ide/intellij/install).

## Getting the code

The walkthrough project is 
[in github](https://github.com/ceylon/ceylon-walkthrough).

### Importing into Eclipse

To import the project into Eclipse:

1. Select `File > Import...`, then `Git > Projects from Git`, and 
   click `Next`.
2. Select `URI`, and click `Next`.
3. Enter the URI `https://github.com/ceylon/ceylon-walkthrough.git` 
   and click `Next`.
4. Select _only_ the branch `master`, and click `Next`.
5. Enter a directory on the local file system, click `Next` twice, 
   and then `Finish`.

### Importing into IntelliJ IDEA

To import the project into IntelliJ:

1. Select `File > New Project From Version Control > Git`.
2. Enter the URL `https://github.com/ceylon/ceylon-walkthrough.git`,
   and click `Clone`.

## Try it

* For English, go to the directory `source/en`.
* Para español, ve a `source/es`.
* Pour le français, allez à `source/fr`.
* Für die deutsche Version, siehe `source/de`.

Start with `01basics.ceylon`.
 
